新增查询所有项目
修复swagger错误的问题
